--- a/client/src/hoja-de-estilos/DetailedCard.css
+++ b/client/src/hoja-de-estilos/DetailedCard.css
@@ -1,36 +1,22 @@
 .detailed_card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  background-color: #f5f5f5;
-  border-radius: 10px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
-  margin: 0;
-  padding: 0;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
 }
 
 .container_detail {
-  background-color: #f5f5f5;
+  background-color: rgb(128, 128, 128);
+  color: white;
 }
 
 .row {
+  padding: 3%;
 }
 
 .columns {
-  border-right: 2px solid rgb(148, 144, 144);
+  border-right: 2px solid rgb(49, 49, 49);
   padding: 3%;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.columns .img {
-  /* increase size of image: */
-  width: 100%;
-  height: 100%;
 }
 
 .last_column {
