--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@
   height: 35vh; */
 }
 
-.display-4 {
+/* .display-4 {
   font-size: 60px;
   font-style: oblique;
   font-weight: bold;
@@ -18,4 +18,4 @@
   font-size: 20px;
   font-style: oblique;
   font-weight: bold;
-}
+} */
