--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('./Assets/4.png');
+  background-image: url('./Assets/background.png');
 }
 
 @media screen and (max-width: 1000px) {
