--- a/client/src/hoja-de-estilos/Card.css
+++ b/client/src/hoja-de-estilos/Card.css
@@ -39,7 +39,9 @@
 .button_row {
   position: absolute;
   bottom: 0;
+  left: 10%;
   width: 100%;
+  height: 20%;
   padding: 0.5rem 1rem;
 }
 
@@ -77,11 +79,27 @@
   margin: 0;
 }
 
-/* mobile */
-@media screen and (min-width: 320px) and (max-width: 480px) {
-  .flip-card {
-    width: 300px;
-    height: 400px;
+/* Responsive fixes */
+@media screen and (min-width: 320px) and (max-width: 992px) {
+  .button_row {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .row_back_first {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .close_button {
+    margin-top: 10px;
+    margin-right: 20px;
+    padding-right: 40px;
+  }
+  .image_back {
+    display: none;
   }
 }
 
@@ -188,5 +206,3 @@ button:hover .arrow_icon {
 button:hover .button_text {
   color: #fff;
 }
-
-/* Modal for detail of cards: */
