fixed deploy and added footer

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,7 @@
 body {
   background-image: url('./Assets/background.png');
+  background-size: cover;
+  background-position: center;
 }
 
 @media screen and (max-width: 1000px) {
