--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,11 +2,8 @@ body {
   background-image: url('./Assets/background.png');
   background-size: cover;
   background-position: center;
-}
-
-@media screen and (max-width: 1000px) {
-  body {
-    background-size: cover;
-    background-position: center;
-  }
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  height: auto;
+  width: 100vw;
 }
