--- a/client/src/hoja-de-estilos/Footer.css
+++ b/client/src/hoja-de-estilos/Footer.css
@@ -11,8 +11,10 @@
   flex-direction: column;
   justify-content: 'space-around';
   align-items: 'center';
-  width: 100%;
-  margin-top: 7%;
+  width: 100vw;
+  margin-top: 5vh;
+  position: relative;
+  bottom: 0;
 }
 
 .icon_footer {
@@ -23,19 +25,16 @@
   margin: 2%;
 }
 
-/* responsive for cellphone: */
-@media screen and (max-width: 390px) {
-  .footer {
-    width: 115vw;
-    margin-left: -5vw;
-  }
-  .icon_fo oter {
-    margin: 1%;
-  }
-}
-
 .icon_footer:hover {
   background-color: white;
   color: black;
   transition: all 0.5s ease-in-out;
+}
+
+/* responsive footer for cellphone: */
+@media screen and (max-width: 390px) {
+  .icon_footer {
+    width: 3.5rem;
+    height: 3.5rem;
+  }
 }
